# adjoint_helper

./: .gitignore  README.md  pyproject.toml
examples/: 01_single_region_adam.py  01_single_region_nlopt.py  02_multi_region_nlopt.py  README.md  multi_region_example_settings.py  single_region_example_settings.py
src/adjoint_helper/: __init__.py  adam_optimization.py  constraints.py  design_analysis.py  mask_region.py  nlopt_optimization.py  optax_optimization.py  optimization_history.py  optimization_settings.py  simulation_settings.py  util.py  visualization.py
src/adjoint_helper/backends/meep/: utils.py
src/adjoint_helper/core/: base_settings.py  constraints.py  defs.py  export_settings.py  objective_factory.py  optimization_history.py  simulation_settings.py
src/adjoint_helper/optimizers/: diffusion_optimization.py  nlopt_epigraph_optimization.py  nlopt_optimization.py  optax_optimization.py
src/adjoint_helper/utils/: design_analysis.py  util.py  visualization.py
src/adjoint_helper/vendors/meep/: README.md  filters.py
tests/: test_connected.py  test_connected_settings.py
