[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "adjoint_helper"
version = "0.0.1"
authors = [
  { name="Ben Cerjan", email="bcerjan@gmail.com" },
]
description = "A set of tools for assisting with adjoint-based optimization for electromagnetics."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]


dependencies = [
  "numpy",
  "matplotlib",
]

[project.opional-dependencies]
meep = [
  "meep",
]

optimization = [
  "nlopt",
  "optax",
]

all = [
  "meep",
  "nlopt",
  "optax",
]

[project.urls]
Homepage = "https://github.com/bcerjan/adjoint_helper"
Issues = "https://github.com/bcerjan/adjoint_helper/issues"